Change Title of the main page.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Main Page ระบบยื่นคำร้องจดทะเบียนเพิ่มเติม</title>
+        <title>Main Page ระบบยื่นคำร้องจดทะเบียนเพิ่มเติม พัฒนาโดยสาขาคอมพิวเตอร์</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" 
